Actions
Bug #15471
closed-e and specified file does not kick script_compiled TracePoint event
Bug #15471:
-e and specified file does not kick script_compiled TracePoint event
Updated by ko1 (Koichi Sasada) over 7 years ago
- Status changed from Open to Closed
Applied in changeset trunk|r66595.
fix missed script_compiled events. [Bug #15471]
-
ruby.c (process_options): script_compiled events are missed on
command line -e or specified file. this commit fix it.
[Bug #15471]This patch should be backport to Ruby 2.6 branch.
-
vm_core.h (rb_exec_event_hook_script_compiled): introduce utility
function to invoke a script_compiled event.
Updated by nagachika (Tomoyuki Chikanaga) over 7 years ago
- Backport changed from 2.4: UNKNOWN, 2.5: UNKNOWN, 2.6: UNKNOWN to 2.4: DONTNEED, 2.5: DONTNEED, 2.6: REQUIRED
Updated by naruse (Yui NARUSE) over 7 years ago
- Backport changed from 2.4: DONTNEED, 2.5: DONTNEED, 2.6: REQUIRED to 2.4: DONTNEED, 2.5: DONTNEED, 2.6: DONE
ruby_2_6 r66815 merged revision(s) 66595.
Actions